[package]
name = "gitrip"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey van Aswegen <jeffmess@gmail.com>"]
license = "Apache-2.0"
description = "A command line utility which deletes merged git branches conveniently."
readme = "README.md"
homepage = "https://github.com/jeffmess/gitrip"
repository = "https://github.com/jeffmess/gitrip"
keywords = ["cli", "git", "gitrip"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.21", features = ["derive"] }
